# flick

./: COPYING  COPYRIGHT  GNUmakeconf.in  GNUmakefile.in  GNUmakerules  GNUmakerules.doc  GNUmakerules.include  GNUmakerules.lib  INSTALL  README  TAGS  WHAT-IS-THIS  aclocal.m4  config.sub  configure  configure.in
c/: WHAT-IS-THIS
c/libcast/: GNUmakefile.in  WHAT-IS-THIS  aoi_const_to_cast_expr.c  cast.c  cast_add_def.c  cast_add_expr_array_value.c  cast_add_init_array_value.c  cast_add_scope_name.c  cast_add_template_arg_array_value.c  cast_add_type_array_value.c  cast_block_absorb_stmt.c  cast_block_add_stmt.cc  cast_block_add_var.cc  cast_check.c  cast_class_add_parent.c  cast_cmp_expr.c  cast_cmp_init.c  cast_cmp_scoped_names.c  cast_cmp_type.c  cast_copy_scoped_name.c  cast_del_scope_name.c  cast_expr_const.c  cast_find_def.c  cast_find_label.c  cast_find_typedef_type.c  cast_func_add_param.c  cast_init_function_type.c  cast_new_aggregate_type.c  cast_new_array_type.c  cast_new_binary_expr.c  cast_new_block.c  cast_new_break.c  cast_new_case.c  cast_new_class_type.c  cast_new_continue.c  cast_new_decl.c  cast_new_def_t.c  cast_new_default.c  cast_new_expr.c  cast_new_expr_assign.c  (+86 more)
c/libpres_c/: GNUmakefile.in  WHAT-IS-THIS  channels.c  descend_collapsed_union.cc  descend_mapping_stub.cc  find_mu_stub.c  interpose_argument.c  interpose_direction.c  interpose_indirection_pointer.cc  interpose_internal_array.c  interpose_param_root.c  interpose_pointer.c  interpose_reference.c  interpose_temporary.c  make_arglist_name.cc  mint_to_ctype.cc  mint_to_ctype_name.cc  pres_c_add_inline_struct_slot.c  pres_c_add_inline_union_case.c  pres_c_check.c  pres_c_dir_name.c  pres_c_init.c  pres_c_new_inline.c  pres_c_new_inline_atom.c  pres_c_new_inline_expanded_union.c  pres_c_new_inline_func_params_struct.c  pres_c_new_inline_struct.c  pres_c_new_inline_struct_union.c  pres_c_new_inline_virtual_union.cc  pres_c_new_inline_void_union.c  pres_c_new_mapping.c  pres_c_readfh.c  pres_c_set_inline_tags.c  pres_c_set_mapping_tags.c  pres_c_writefh.c  pres_c_xdr.c  pres_function.c  tags.c
c/pbe/: WHAT-IS-THIS
c/pbe/fluke/: GNUmakefile.in  WHAT-IS-THIS  bcopy_opts.cc  client.cc  fluke.h  fluke_mu_mapping_sid.cc  fluke_target_mu_mapping_reference.cc  get_prim_params.cc  make_interface_graph.cc  marshal.cc  misc.cc  mu_array.cc  mu_make_client_mu_state.cc  mu_make_target_mu_state.cc  mu_mapping_reference.cc  mu_server_func_reply.cc  mu_server_func_target.cc  server.cc
c/pbe/iiop/: GNUmakefile.in  (+16 more)
c/pfe/: WHAT-IS-THIS  macros.h
doc/: BUGS  WHAT-IS-THIS  announce.text
doc/guts/: GNUmakefile.in  WHAT-IS-THIS  abstract.tex  aoi.tex  aoi2mint.fig  c-pbe-write.tex  cast.tex  coding.tex  fe.tex  flick-desc.tex  flick.fig  goals.tex  guts-body.tex  guts-commands.tex  guts-decls.tex  guts-html.tex  guts-print.tex  guts.cfg  guts.ps  introduction.tex  libcompiler.tex  make-dir-descript  meta.tex  mint.fig  mint.tex  notes-nathan.tex  org.tex  pbe.tex  pg.tex  pgflow.fig  pres-c.tex  runtime.tex  scml.tex  separation.tex  thread.tex
doc/usersguide/: GNUmakefile.in  WHAT-IS-THIS  abstract.tex  be.tex  compare.tex  compile.tex  corba-example.tex  corba-runtime.tex  corbaxx-example.tex  fe.tex  intro.tex  pg.tex  rpc-example.tex  rpc-runtime.tex  runtime.tex  together.tex  use-over.tex  user-body.tex  user-commands.tex  user-decls.tex  user-html.tex  user-print.tex  user.cfg  user.ps
fe/: WHAT-IS-THIS
fe/mig/: GNUmakefile.in  WHAT-IS-THIS  boolean.h  cpu.sym  error.c  flick-mig.sh  gen_error_mappings.c  global.c  global.h  iheader.c  lexxer.h  lexxer.l  main.c  message.h  mig_string.h  mom_routines.c  mom_routines.h  parser.y  routine.c  routine.h  statement.h  string.c  type.c  type.h  xlate.c  xlate.h  xlate_pres.c  xlate_util.c  xlate_util.h
fe/newcorba/: Errors.cc  Errors.hh  GNUmakefile.in  WHAT-IS-THIS  helpers.cc  helpers.hh  main.cc  parser.yy  scanner.ll
fe/sun/: GNUmakefile.in  WHAT-IS-THIS  main.c  rpc_parse.c  rpc_parse.h  rpc_scan.c  rpc_util.c  rpc_util.h  xlate.c
libaoi/: GNUmakefile.in  WHAT-IS-THIS  aoi_check.c  aoi_const_cmp.c  aoi_def_member.c  aoi_deref_fwd.c  aoi_get_array_length.c  aoi_get_int_size.c  aoi_get_parent_scope.c  aoi_get_scoped_name.c  aoi_indir.c  aoi_indir_1.c  aoi_new_const.c  aoi_new_const_char.c  aoi_new_const_float.c  aoi_new_const_int.c  aoi_new_const_string.c  aoi_new_const_string_cat.c  aoi_readfh.c  aoi_to_mint.c  aoi_writefh.c  aoi_xdr.c
libcompiler/: GNUmakefile.in  WHAT-IS-THIS  asprintf.c  call_cpp.c  filename.c  fopen_search.c  front_end_args.c  h_table.c  handle_args.c  lnode.c  mustcalloc.c  mustmalloc.c  mustrealloc.c  muststrdup.c  panic.c  ptr_stack.c  strcasecmp.c  w_i_print.c  w_indent.c  w_print.c  warn.c
libmeta/: GNUmakefile.in  WHAT-IS-THIS  data_channel.c  io_file.c  meta_xdr.c  misc.c
libmint/: GNUmakefile.in  WHAT-IS-THIS  mint_add_array_def.c  mint_add_def.c  mint_add_def_tags.c  mint_add_integer_def.c  mint_add_standard_defs.c  mint_add_struct_slot.c  mint_add_union_case.c  mint_add_union_def.c  mint_check.c  mint_const_check.c  mint_const_cmp.c  mint_find_union_case.cc  mint_get_array_len.c  mint_get_int_size.c  mint_new_const.c  mint_new_const_from_aoi_const.c  mint_new_const_int.c  mint_new_const_string.c  mint_readfh.c  mint_writefh.c  mint_xdr.c  private.h
mom/: GNUmakefile.in  WHAT-IS-THIS  aoi.h  aoi.x  cast.h  cast.x  compiler.h  idl_id.h  libaoi.h  libmeta.h  libmint.h  meta.h  meta.x  mint.h  mint.x  pres_c.h  pres_c.x  types.h
mom/c/: WHAT-IS-THIS  libcast.h  libpres_c.h  p_type_collection.hh  pbe.hh  pfe.hh  pg_corba.hh  pg_corbaxx.hh  presentation_impl.hh  scml.hh
runtime/: COPYING  GNUmakerules.lib
runtime/headers/: GNUmakefile.in
support/cygwin32/: README
test/: GNUmakefile.in  GNUmakerules.common  GNUmakerules.fe  GNUmakerules.pbe  GNUmakerules.pfe  GNUmakerules.programs  README  WHAT-IS-THIS
util/: WHAT-IS-THIS
util/aoid/: GNUmakefile.in  WHAT-IS-THIS  aoid.cc
util/presd/: GNUmakefile.in  WHAT-IS-THIS  main.c  print_pres_c.c  print_pres_c_inline.c  print_pres_c_mapping.c  print_refs.c
(+768 files in other folders)
